# personal-sports

./: .gitignore  README.md  main.py  pyproject.toml
src/personal_sports/: main.py  utils.py
src/personal_sports/sport/: README.md  formual1.py
src/pwa/: index.html
