[project]
name = "personal-sports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "whenever>=0.9.5",
]


[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
